# VideoClipFinder

./: .env.example  .gitignore  README.md  docker-compose.yml  viral-clip-finder-ARCHITECTURE.md  viral-clip-finder-PRD.md  viral-clip-finder-design.jsx
.claude/agents/: moment-tagger.md
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: __init__.py  base.py  moment.py  moment_tag.py  tag.py  tag_correlation.py  transcript.py  video.py
backend/app/schemas/: __init__.py  moment.py  search.py  tag.py  transcript.py  video.py
backend/app/services/: analyzer.py  vault_client.py
database/: README.md  schema.sql
frontend/: Dockerfile  biome.json  index.html  package.json  vite.config.ts
frontend/src/: App.tsx
scripts/: dev.sh  setup.sh
