[project]
name = "viral-clip-finder-backend"
version = "0.1.0"
description = "AI-powered viral moment detection and tagging system"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.35",
    "psycopg[binary]>=3.2.3",
    "pgvector>=0.3.5",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "claude-agent-sdk>=0.1.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.2",
    "asyncpg>=0.29.0",
    "alembic>=1.13.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.4",
    "httpx>=0.27.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
